test/resources/Typecheck/Cycle.expected
Cycle.java:7: error: cyclic inheritance involving C1
